# retronomicon-workspace

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  LICENSE  README.md  build-arkos.sh  build-sandbox.sh  build.sh  clean-arkos.sh  clean.sh  git_push.sh  init.sh  play.sh
ToolChain/: TC-arkos.cmake
asset/card/: cards.json
asset/card/card_script/: do_nothing.lua
asset/conversation/: characters.json  conversation.json  conversation_backup.json
asset/conversation/characters/: jenna_liss.json  miho.json
asset/deck/: deck.json
docs/: status.md
examples/conversation-console/: CMakeLists.txt  README.md  main.cpp
sandbox/: CMakeLists.txt  backup.cpp  main.cpp  main_bak.cpp
src/: main.cpp
